--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,3 +4,4 @@
 @import "../components/home/home";
 @import "../components/user/user";
 @import "../components/userInfo/userInfo";
+@import "../components/form/form";
