--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -1,6 +1,5 @@
 body {
-    background: linear-gradient(to right bottom, #65c3df, #6caeeb);
-    // background: linear-gradient(to right bottom, #65dfc9, #6cdbeb);
+    background: $bgMain
 }
 
 .users--list {
