--- a/src/components/userInfo/_userInfo.scss
+++ b/src/components/userInfo/_userInfo.scss
@@ -5,11 +5,13 @@
 .user-container {
     min-height: 100vh;
     font-family: $fontOpenSans;
+    position: relative;
 }
 
 .user-nav {
     width: 100%;
     height: 4rem;
+    margin-top: 1rem;
 }
 
 .user-link {
@@ -43,51 +45,99 @@
 .user-card {
     width: 90%;
     height: auto;
-    margin: 0 auto;
-    padding: 3rem 4rem 7rem 4rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 5rem 4rem 8rem 4rem;
     background-color: white;
-    background: linear-gradient(to right bottom,
-    rgba(255, 255, 255, .9),
-    rgba(255, 255, 255, .3));
+    background: $bgLight;
     box-shadow: 0 0 4px rgba(255, 255, 255, .3);
     border-radius: 2rem;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    box-sizing: border-box;
+    backdrop-filter: blur(2rem);
+    z-index: 30;
+}
+
+.circle-bg {
+    @include bgColor;
+    position: absolute;
+    width: 30rem;
+    height: 30rem;
+    border-radius: 50%;
+    top: 10%;
+    right: 0%;
+    z-index: -1;
 }
 
 .user-box-img {
-    flex-basis: 40%;
 
     .user-img {
         display: block;
-        width: 90%;
-        border-radius: 100%;
+        // width: 70%;
+        height: 70%;
+        border-radius: 50%;
         margin-bottom: 3rem;
     }
+}
 
-    .fab {
-        width: 1.5rem;
-        font-size: 1.6rem;
-        color: #2883d8;
-        margin-right: 1.5rem;
-        text-align: center;
+.user-info-name {
+    font-size: 2rem;
+    line-height: 2.4rem;
+    margin-bottom: .5rem;
+    font-weight: 500;
+}
+
+.user-detail {
+    color: black;
+    opacity: .5;
+    line-height: 1.2rem;
+    font-size: 1rem;
+}
+
+.user-info {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 35% 60%;
+    width: 100%;
+    margin: .5rem 0;
+}
+
+.user-text {
+    font-size: 1.3rem;
+    line-height: 1.8rem;
+    padding-left: .5rem;
+}
+
+.user-location {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    opacity: .5;
+    margin-bottom: 3rem;
+}
+
+.user-info-container {
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: '';
+        width: 1px;
+        height: 100%;
+        background-color:$colorMain;
+        opacity: .4;
+        top: 0;
+        left: 30%;
     }
+}
 
-    .user-info-link {
-        text-decoration: none;
+.user-detail-link {
+    text-decoration: none;
+    color: black;
 
-        span {
-            transition: .1s;
-            font-size: 1.2rem;
-            line-height: 2rem;
-            color:black;
-            &:hover {
-                -ms-text-combine-horizontal: scale(1.1);
-            }
-        }
-
-        span:hover {
-            transform: scale(1.1);
-        }
+    &:hover {
+        text-decoration: underline;
     }
 }
