--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,1 +1,11 @@
 $fontOpenSans: 'Open Sans', sans-serif;
+$bgLight: linear-gradient(to right bottom,rgba(255, 255, 255, .9), rgba(255, 255, 255, .3));
+$bgMain: linear-gradient(to right bottom, #65c3df, #6caeeb);
+$colorMain: #2883d8;
+
+@mixin bgColor {
+    background-color: white;
+    background: linear-gradient(to right bottom,
+    rgba(255, 255, 255, .5),
+    rgba(255, 255, 255, .1));
+}
