--- a/src/components/user/_user.scss
+++ b/src/components/user/_user.scss
@@ -1,17 +1,11 @@
-.user--item {
+.user-item {
     flex-basis: 29%;
     box-sizing: border-box;
-    padding: 2rem 1rem 3rem 1rem;
-    background-color: white;
-    background: linear-gradient(to right bottom,
-    rgba(255, 255, 255, .9),
-    rgba(255, 255, 255, .3));
     box-shadow: 0 0 4px rgba(255, 255, 255, .3);
     margin: 2rem 0;
+    height: 33rem;
     border-radius: 1rem;
     position: relative;
-    backdrop-filter: blur(2rem);
-    z-index: 3;
 
     &::before, &::after {
         @include bgColor;
@@ -34,19 +28,32 @@
     }
 }
 
-.user--img--box {
+.user-bg-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 2rem 1rem 3rem 1rem;
+    background-color: white;
+    background: $bgLight;
+    backdrop-filter: blur(2rem);
+    border-radius: 1rem;
+}
+
+.user-img-box {
     width: 70%;
-    height: 30%;
+    height: auto;
     margin: 0 auto 2.5rem auto;
 }
 
-.user--img {
+.user-img-home {
     display: block;
     width: 100%;
     border-radius: 50%;
 }
 
-.user--info {
+.user-information {
     width: 100%;
     position: relative;
 
@@ -64,9 +71,9 @@
     }
 }
 
-.user--name, .user--link {
+.user-name, .user-link {
     padding: 0rem 2rem;
-    color: #2883d8;
+    color: $colorMain;
     font-size: 1.5rem;
     font-family: $fontOpenSans;
     margin-top: 1rem;
@@ -84,11 +91,17 @@
     }
 }
 
-.user--link:hover {
+.user-link:hover {
     transform: scale(1.01);
     color: #1b3899;
 
     .fas {
         color: #1b4399;
+    }
+}
+
+@media (max-width: 1550px) {
+    .user-item {
+        height: 29rem;
     }
 }
