--- a/src/components/userInfo/_userInfo.scss
+++ b/src/components/userInfo/_userInfo.scss
@@ -1,5 +1,5 @@
 .hidden {
-    display: block;
+    display: none;
 }
 
 .user-container {
@@ -14,19 +14,19 @@
     margin-top: 1rem;
 }
 
-.user-link {
+.user-info-link {
     text-align: left;
     text-decoration: none;
-    color: rgba(255, 255, 255, .9);
+    color: $colorLight;
     font-size: 1.3rem;
     padding: .5rem 1rem;
-    border-bottom: 2px solid rgba(255, 255, 255, .9);
-    box-shadow: 0 0 2px rgba(255, 255, 255, .9);
+    border-bottom: 2px solid $colorLight;
+    box-shadow: 0 0 2px $colorLight;
     border-radius: .1rem;
     transition: .1s;
 
     .fas {
-        color: rgba(255, 255, 255, 0.9);
+        color: $colorLight;
         font-size: 1.3rem;
         margin-right: 1rem;
         transition: .1s;
@@ -44,43 +44,40 @@
 
 .user-card {
     width: 90%;
-    height: auto;
+    height: 38rem;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 5rem 4rem 8rem 4rem;
-    background-color: white;
-    background: $bgLight;
     box-shadow: 0 0 4px rgba(255, 255, 255, .3);
     border-radius: 2rem;
-    display: grid;
-    grid-template-columns: 40% 60%;
     box-sizing: border-box;
-    backdrop-filter: blur(2rem);
-    z-index: 30;
-}
 
-.circle-bg {
-    @include bgColor;
-    position: absolute;
-    width: 30rem;
-    height: 30rem;
-    border-radius: 50%;
-    top: 10%;
-    right: 0%;
-    z-index: -1;
-}
-
-.user-box-img {
-
-    .user-img {
-        display: block;
-        // width: 70%;
-        height: 70%;
-        border-radius: 50%;
-        margin-bottom: 3rem;
+    .user-bg-box {
+        display: grid;
+        grid-template-columns: 40% 60%;
+        padding: 5rem 4rem 8rem 4rem;
     }
+
+    &::before {
+        @include bgColor;
+        position: absolute;
+        content: '';
+        width: 30rem;
+        height: 30rem;
+        border-radius: 50%;
+        top: -10rem;
+        right: -10rem;
+        z-index: -1;
+    }
+}
+
+.user-img {
+    display: block;
+    width: 25rem;
+    height: 25rem;
+    border-radius: 50%;
+    margin-bottom: 3rem;
 }
 
 .user-info-name {
@@ -126,7 +123,7 @@
         content: '';
         width: 1px;
         height: 100%;
-        background-color:$colorMain;
+        background-color: $colorMain;
         opacity: .4;
         top: 0;
         left: 30%;
@@ -139,5 +136,28 @@
 
     &:hover {
         text-decoration: underline;
+    }
+}
+
+@media (max-width: 1550px) {
+    .user-img {
+        width: 17rem;
+        height: 17rem;    
+    }
+
+    .user-container {
+        overflow: hidden;
+    }
+
+    .user-card {
+        padding: 4rem 3rem 6rem 3rem;
+        height: 30rem;
+
+        &::before {
+            width: 18rem;
+            height: 18rem;
+            right: -5rem;
+            top: -5rem;
+        }
     }
 }
