--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,7 +1,8 @@
 $fontOpenSans: 'Open Sans', sans-serif;
-$bgLight: linear-gradient(to right bottom,rgba(255, 255, 255, .9), rgba(255, 255, 255, .3));
+$bgLight: linear-gradient(to right bottom,rgba(255, 255, 255, .6), rgba(255, 255, 255, .3));
 $bgMain: linear-gradient(to right bottom, #65c3df, #6caeeb);
 $colorMain: #2883d8;
+$colorLight: rgba(255, 255, 255, .9);
 
 @mixin bgColor {
     background-color: white;
