--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -4,6 +4,11 @@ $bgMain: linear-gradient(to right bottom, #65c3df, #6caeeb);
 $colorMain: #2883d8;
 $colorLight: rgba(255, 255, 255, .9);
 
+$mobileScreen: '(min-width: 320px) and (max-width: 600px)';
+$mobileLargeScreen: '(min-width: 601px) and (max-width: 800px)';
+$tableScreen: '(min-width: 801px) and (max-width: 1024px)';
+$laptopScreen: '(min-width: 1025px) and (max-width: 1399px)';
+
 @mixin bgColor {
     background-color: white;
     background: linear-gradient(to right bottom,
