--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -2,9 +2,9 @@ body {
     background: $bgMain;
 }
 
-.users--list {
-    display: flex;
-    flex-wrap: wrap;
+.users-list {
+    display: grid;
+    grid-template-columns: 28% 28% 28%;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -16,12 +16,6 @@ body {
     box-sizing: border-box;
 }
 
-@media (max-width: 1550px) {
-    .container {
-        width: 100%;
-        padding: 1rem;
-    }
-}
 
 .title {
     font-family: $fontOpenSans;
@@ -29,5 +23,27 @@ body {
     margin: 2rem 0 3rem 0;
     text-align: center;
     font-weight: 400;
+}
+
+@media (max-width: 1550px) {
+    .container {
+        width: 100%;
+        padding: 1rem;
+    }
+}
+
+@media #{$mobileScreen} {
+    .users-list {
+        grid-template-columns: 90%;
+    }
+
+    .title {
+        font-size: 2.1rem;
+        line-height: 2.6rem;
+    }
+
+    body, html {
+        overflow-x: hidden;
+    }
 }
 
