--- a/src/components/user/_user.scss
+++ b/src/components/user/_user.scss
@@ -93,10 +93,10 @@
 
 .user-link:hover {
     transform: scale(1.01);
-    color: #1b3899;
+    color:  #03294d;
 
-    .fas {
-        color: #1b4399;
+    .fas, .fab {
+        color: #03294d;
     }
 }
 
