--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -3,6 +3,7 @@
     height: auto;
     margin: 0 0 0 auto;
     text-align: right;
+    grid-area: a;
     display: grid;
     grid-template-columns: 75% 25%;
 }
@@ -10,6 +11,10 @@
 .form-box {
     width: 100%;
     position: relative;
+    display: grid;
+    grid-template-columns: 29% 29% 29%;
+    grid-template-areas: ". . a";
+    justify-content: space-evenly;
 }
 
 .form-input {
@@ -57,19 +62,29 @@
     }
 }
 
+.autocomplete-users-box {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 29% 29% 29%;
+    grid-template-areas: ". . b";
+    justify-content: space-evenly;
+}
+
 .autocomplete-users {
     background: $bgMain;
+    margin: 0 0 0 auto;
     width: 23rem;
     height: 20rem;
+    grid-area: b;
     overflow-y: scroll;
     overflow-x: hidden;
     -ms-overflow-style: none;
     scrollbar-width: none;
     box-shadow: inset 0 0 5px $colorLight;
-    position: absolute;
-    right: 0;
-    z-index: 2;
     box-sizing: border-box;
+    z-index: 2;
 
     &::-webkit-scrollbar {
         display: none;
