--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,3 +5,4 @@
 @import "../components/user/user";
 @import "../components/userInfo/userInfo";
 @import "../components/form/form";
+@import "../components//notFound/notFound";
