--- a/src/components/loader/_loader.scss
+++ b/src/components/loader/_loader.scss
@@ -10,13 +10,9 @@
     margin: 1.2rem auto;
 
     &::before {
+        @include positionAbsolute;
         content: '';
         box-sizing: border-box;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
         border-radius: 50%;
         border: 3px solid rgba(255, 255, 255, .3);
         border-top-color: white;
