--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -3,6 +3,8 @@ $bgLight: linear-gradient(to right bottom,rgba(255, 255, 255, .9), rgba(255, 255
 $bgMain: linear-gradient(to right bottom, #1097c0, #03294d);
 $colorMain: black;
 $colorLight: rgba(255, 255, 255, .9);
+$colorDarkBlue: #03294d;
+$colorWhite: white;
 
 $mobileScreen: '(min-width: 320px) and (max-width: 600px)';
 $mobileLargeScreen: '(min-width: 601px) and (max-width: 800px)';
