--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -25,6 +25,18 @@ body {
     font-weight: 400;
 }
 
+.title-count {
+    font-size: 1.9rem;
+    line-height: 2.2rem;
+    text-align: center;
+    font-family: $fontOpenSans;
+    margin: 2rem 0 1rem 0;
+
+    span {
+        font-weight: 600;
+    }
+}
+
 @media (max-width: 1550px) {
     .container {
         width: 100%;
@@ -40,6 +52,10 @@ body {
     .title {
         font-size: 2.1rem;
         line-height: 2.6rem;
+    }
+
+    .title-count {
+        font-size: 1.4rem;
     }
 }
 
