--- a/src/components/loader/_loader.scss
+++ b/src/components/loader/_loader.scss
@@ -15,7 +15,7 @@
         box-sizing: border-box;
         border-radius: 50%;
         border: 3px solid rgba(255, 255, 255, .3);
-        border-top-color: white;
+        border-top-color: $colorWhite;
         animation: spinner .7s linear infinite;
     }
 }
