--- a/src/components/user/_user.scss
+++ b/src/components/user/_user.scss
@@ -30,7 +30,7 @@
 .user-bg-box {
     @include positionAbsolute;
     padding: 2rem 1rem 3rem 1rem;
-    background-color: white;
+    background-color: $colorWhite;
     background: $bgLight;
     backdrop-filter: blur(2rem);
     border-radius: 1rem;
@@ -88,10 +88,10 @@
 
 .user-link:hover {
     transform: scale(1.01);
-    color:  #03294d;
+    color:  $colorDarkBlue;
 
     .fas, .fab {
-        color: #03294d;
+        color: $colorDarkBlue;
     }
 }
 
